src/objects/ADvendio__Creative__c.object
<CustomObject>
    <description>Creatives associated to CampaignItem.</description>
    <fields>
        <fullName>ADvendio__AdID__c</fullName>
        <description>ID of the Ad, to which the creative is assigned.</description>
        <inlineHelpText>ID of the Ad, to which the creative is assigned.</inlineHelpText>
        <label>Ad ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignItem__c</fullName>
        <description>Campaign item, to which the creative associated.</description>
        <inlineHelpText>Campaign item, to which the creative associated.</inlineHelpText>
        <label>Campaign Item</label>
        <referenceTo>ADvendio__Campaign_Item__c</referenceTo>
        <relationshipLabel>Creatives</relationshipLabel>
        <relationshipName>Creatives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__ClickThroughURL__c</fullName>
        <description>Click through URL for the creative.</description>
        <inlineHelpText>Click through URL for the creative.</inlineHelpText>
        <label>Click Through URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CreativeID__c</fullName>
        <description>ID of the creative created by Ad-Server.</description>
        <inlineHelpText>ID of the creative created by Ad-Server.</inlineHelpText>
        <label>Creative ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CreativeTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Creative Template</label>
        <referenceTo>ADvendio__AdServer_ID__c</referenceTo>
        <relationshipLabel>Creatives</relationshipLabel>
        <relationshipName>Creatives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__SlotSize__c</fullName>
        <description>Size of the slot, at which the creative to apply.</description>
        <inlineHelpText>Size of the slot, at which the creative to apply.</inlineHelpText>
        <label>Slot Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1x1</fullName>
                </value>
                <value>
                    <fullName>80x15</fullName>
                </value>
                <value>
                    <fullName>88x31</fullName>
                </value>
                <value>
                    <fullName>100x300</fullName>
                </value>
                <value>
                    <fullName>120x60</fullName>
                </value>
                <value>
                    <fullName>120x90</fullName>
                </value>
                <value>
                    <fullName>120x240</fullName>
                </value>
                <value>
                    <fullName>120x600</fullName>
                </value>
                <value>
                    <fullName>125x125</fullName>
                </value>
                <value>
                    <fullName>160x600</fullName>
                </value>
                <value>
                    <fullName>180x150</fullName>
                </value>
                <value>
                    <fullName>234x60</fullName>
                </value>
                <value>
                    <fullName>240x400</fullName>
                </value>
                <value>
                    <fullName>250x250</fullName>
                </value>
                <value>
                    <fullName>300x250</fullName>
                </value>
                <value>
                    <fullName>300x600</fullName>
                </value>
                <value>
                    <fullName>336x280</fullName>
                </value>
                <value>
                    <fullName>468x60</fullName>
                </value>
                <value>
                    <fullName>728x90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <description>Type of the creative.</description>
        <inlineHelpText>Type of the creative.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Flash</fullName>
                </value>
                <value>
                    <fullName>Rich Media</fullName>
                </value>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Text Link</fullName>
                </value>
                <value>
                    <fullName>Interstitial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Creative</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{0}</displayFormat>
        <label>Creative Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>